--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,86 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: acme;
+  src: url(../public/assets/fonts/Acme-Regular.ttf);
+}
+@font-face {
+  font-family: circular-book;
+  src: url(../public/assets/fonts/CircularStd-Book.ttf);
+}
+@font-face {
+  font-family: circular-medium;
+  src: url(../public/assets/fonts/circular-std-medium.ttf);
+}
+@font-face {
+  font-family: neue-montreal;
+  src: url(../public/assets/fonts/NeueMontreal-Regular.ttf);
+}
+@font-face {
+  font-family: roslindale-display;
+  src: url(../public/assets/fonts/RoslindaleDisplayCondensed-Regular.ttf);
+}
+@font-face {
+  font-family: gtAlpina;
+  src: url(../public/assets/fonts/GT-Alpina-Regular-Italic.ttf);
+}
+
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
+}
+.line {
+  fill: none;
+  stroke: #000;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened-line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened-line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened-line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+.blob {
+  animation-iteration-count: infinite;
+  animation-name: rotate;
+  animation-duration: 3.5s;
+  animation-timing-function: linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
