--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,7 @@
     transform: rotate(360deg);
   }
 }
+
 .contact {
   background-color: hsla(0, 100%, 50%, 1);
   background-image: radial-gradient(
@@ -113,4 +114,28 @@
     radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
     radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
     radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+  background-size: 100% 100%;
+  animation: MoveBackground 15s linear infinite;
+}
+@keyframes MoveBackground {
+  0% {
+    background-position: 0% 0%;
+    background-size: 100% 100%;
+  }
+  25% {
+    background-position: 100% 0%;
+    background-size: 130% 130%;
+  }
+  50% {
+    background-position: 100% 100%;
+    background-size: 115% 115%;
+  }
+  75% {
+    background-position: 0% 100%;
+    background-size: 130% 130%;
+  }
+  100% {
+    background-position: 0% 0%;
+    background-size: 100% 100%;
+  }
 }
