Enhancement: Added Neomorphic Lens & Magnet Effects
Implemented neomorphic lens effect using inset box shadow on hover in the contact section for a subtle depth effect. Also added magnet effect to project tags in the work section for an engaging interaction.

--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,6 @@
     background-size: 100% 100%;
   }
 }
+.lens {
+  box-shadow: inset 16px 16px 32px #c5c5c5, inset -16px -16px 32px #fbfbfb;
+}
