--- a/src/index.css
+++ b/src/index.css
@@ -27,21 +27,43 @@
   src: url(./assets/fonts/GT-Alpina-Regular-Italic.ttf);
 }
 @font-face {
-  font-family: OverusedGrotesk-Bold;
-  src: url(./assets/fonts/OverusedGrotesk-Bold.ttf);
-}
-@font-face {
-  font-family: OverusedGrotesk-Medium;
-  src: url(./assets/fonts/OverusedGrotesk-Medium.ttf);
-}
-@font-face {
-  font-family: OverusedGrotesk-Bold;
-  src: url(./assets/fonts/OverusedGrotesk-VF.ttf);
-}
-@font-face {
   font-family: BebasNeue-Regular;
   src: url(./assets/fonts/BebasNeue-Regular.ttf);
 }
+@font-face {
+  font-family: Canopee-Regular;
+  src: url(./assets/fonts/Canopee-Regular.otf);
+}
+
+/* .hero {
+  background-image: url(./assets/images/UMnw0tW.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  animation: MoveBackground 15s linear infinite;
+}
+@keyframes MoveBackground {
+  0% {
+    background-position: 0% 0%;
+    background-size: 100% 100%;
+  }
+  25% {
+    background-position: 100% 0%;
+    background-size: 130% 130%;
+  }
+  50% {
+    background-position: 100% 100%;
+    background-size: 115% 115%;
+  }
+  75% {
+    background-position: 0% 100%;
+    background-size: 130% 130%;
+  }
+  100% {
+    background-position: 0% 0%;
+    background-size: 100% 100%;
+  }
+} */
 
 .menu {
   background-color: transparent;
@@ -99,46 +121,4 @@
   100% {
     transform: rotate(360deg);
   }
-}
-
-.contact {
-  background-color: hsla(0, 100%, 50%, 1);
-  background-image: radial-gradient(
-      at 40% 20%,
-      hsla(28, 100%, 74%, 1) 0px,
-      transparent 50%
-    ),
-    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
-  background-size: 100% 100%;
-  animation: MoveBackground 15s linear infinite;
-}
-@keyframes MoveBackground {
-  0% {
-    background-position: 0% 0%;
-    background-size: 100% 100%;
-  }
-  25% {
-    background-position: 100% 0%;
-    background-size: 130% 130%;
-  }
-  50% {
-    background-position: 100% 100%;
-    background-size: 115% 115%;
-  }
-  75% {
-    background-position: 0% 100%;
-    background-size: 130% 130%;
-  }
-  100% {
-    background-position: 0% 0%;
-    background-size: 100% 100%;
-  }
-}
-.lens {
-  box-shadow: inset 16px 16px 32px #c5c5c5, inset -16px -16px 32px #fbfbfb;
 }
