--- a/src/index.css
+++ b/src/index.css
@@ -35,36 +35,6 @@
   src: url(./assets/fonts/Canopee-Regular.otf);
 }
 
-/* .hero {
-  background-image: url(./assets/images/UMnw0tW.jpeg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100% 100%;
-  animation: MoveBackground 15s linear infinite;
-}
-@keyframes MoveBackground {
-  0% {
-    background-position: 0% 0%;
-    background-size: 100% 100%;
-  }
-  25% {
-    background-position: 100% 0%;
-    background-size: 130% 130%;
-  }
-  50% {
-    background-position: 100% 100%;
-    background-size: 115% 115%;
-  }
-  75% {
-    background-position: 0% 100%;
-    background-size: 130% 130%;
-  }
-  100% {
-    background-position: 0% 0%;
-    background-size: 100% 100%;
-  }
-} */
-
 .menu {
   background-color: transparent;
   border: none;
@@ -120,5 +90,15 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+
+  .nav-height {
+    @apply h-[calc(100vh-20px)];
   }
 }
