--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,37 @@
     @apply h-[calc(100vh-20px)];
   }
 }
+
+.skill-para {
+  width: calc(40rem + 40vw);
+  font-size: calc(1.5rem + 1vw);
+  line-height: calc(3rem + 2vw);
+  padding-block: 3rem;
+}
+
+@media (max-width: 1023px) {
+  .skill-para {
+    width: calc(35rem + 35vw);
+  }
+}
+@media (max-width: 810px) {
+  .skill-para {
+    width: calc(30rem + 30vw);
+    font-size: calc(1rem + 1vw);
+    line-height: calc(2rem + 2vw);
+  }
+}
+@media (max-width: 596px) {
+  .skill-para {
+    width: calc(25rem + 25vw);
+    font-size: calc(0.9rem + 0.9vw);
+    line-height: calc(1.9rem + 1.9vw);
+  }
+}
+@media (max-width: 434px) {
+  .skill-para {
+    width: calc(20rem + 20vw);
+    font-size: calc(0.8rem + 0.8vw);
+    line-height: calc(1.8rem + 1.8vw);
+  }
+}
