Implement hover mail animation for contact page and add GitHub and LinkedIn social links

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: acme;
   src: url(./assets/fonts/Acme-Regular.ttf);
