--- a/src/index.css
+++ b/src/index.css
@@ -205,3 +205,97 @@
     line-height: calc(1.8rem + 1.8vw);
   }
 }
+
+.skills-wrapper1,
+.skills-wrapper2 {
+  width: 90%;
+  max-width: 1536px;
+  margin-inline: auto;
+  position: relative;
+  height: 100px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 20%,
+    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 0)
+  );
+}
+
+.item-left,
+.item-right {
+  background: #7a8fff;
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  border-radius: 10px;
+}
+.item-left {
+  left: max(calc(200px * 10), 100%);
+  animation: scrollLeft linear 30s infinite;
+}
+.item-right {
+  right: max(calc(200px * 10), 100%);
+  animation: scrollRight linear 30s infinite;
+}
+
+@keyframes scrollLeft {
+  to {
+    left: -200px;
+  }
+}
+@keyframes scrollRight {
+  to {
+    right: -200px;
+  }
+}
+
+.item-left,
+.item-right {
+  animation-delay: calc(30s / 10 * (10 - var(--index)) * -1);
+}
+
+.item-left:nth-child(1),
+.item-right:nth-child(1) {
+  --index: 1;
+}
+.item-left:nth-child(2),
+.item-right:nth-child(2) {
+  --index: 2;
+}
+.item-left:nth-child(3),
+.item-right:nth-child(3) {
+  --index: 3;
+}
+.item-left:nth-child(4),
+.item-right:nth-child(4) {
+  --index: 4;
+}
+.item-left:nth-child(5),
+.item-right:nth-child(5) {
+  --index: 5;
+}
+.item-left:nth-child(6),
+.item-right:nth-child(6) {
+  --index: 6;
+}
+.item-left:nth-child(7),
+.item-right:nth-child(7) {
+  --index: 7;
+}
+.item-left:nth-child(8),
+.item-right:nth-child(8) {
+  --index: 8;
+}
+.item-left:nth-child(9),
+.item-right:nth-child(9) {
+  --index: 9;
+}
+.item-left:nth-child(10),
+.item-right:nth-child(10) {
+  --index: 10;
+}
